--- a/11. MONGODB with EXPRESS/views/index.ejs
+++ b/11. MONGODB with EXPRESS/views/index.ejs
@@ -17,11 +17,21 @@
       <p>From : <i><%= chat.from %></i></p>
                 <div class="msg">
                      <p><%= chat.msg %></p>
+                     <form method="GET" action="/chats/<%=chat._id%>/edit">
+                      <button> Edit </button>
+                     </form>
                 </div>
 
       <p>Received By <i><%= chat.to %></i></p>
-      <hr></div>
+      <hr>
+      <p>   <%= chat.created_at.toString().split(" ")[4] %>         </p>
+      <p>   <%= chat.created_at.toString().split(" ").slice(0,4).join(" ")     %>     </p>
+      <form method="POST" action="/chats/<%=chat._id%>?_method=DELETE">
+        <button>Delete chat</button>
+      </form>
+    </div>
       <br><br>
+      
     <% } %>
    
   </body>
