--- a/12. MAJOR_PROJECT/views/listings/new.ejs
+++ b/12. MAJOR_PROJECT/views/listings/new.ejs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+
+<%  layout("/layout/boilerplate") %> 
+
 <body>
     <form  method="post" action="/listings">
         <h2>Add a New Listing : </h2>
@@ -19,4 +15,3 @@
     </form>
    
 </body>
-</html>
