--- a/12. MAJOR_PROJECT/public/css/style.css
+++ b/12. MAJOR_PROJECT/public/css/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: "Plus Jakarta Sans", serif !important;
+}
+/* navigation bar */
 .navbar {
     height: 5rem;
     background-color: white;
@@ -25,11 +29,34 @@
     justify-content: center;
     align-items: space-evenly;
 }
-.f-info-links , .f-info-socials{
+.f-info-links , .f-info-socials , .f-info-brand{
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .f-info-socials i {
     font-size: 1.2rem;
     margin-right: 1rem;
+}
+
+/* cards */
+.card{
+    border: none !important;
+    margin-bottom: 2rem;
+}
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+.card-body{
+    padding: 0 !important;
+}
+.card-text p {
+    font-weight: 400 !important;
+}
+.listing-link{
+    text-decoration: none;
 }
