--- a/12. MAJOR_PROJECT/views/listings/edit.ejs
+++ b/12. MAJOR_PROJECT/views/listings/edit.ejs
@@ -1,22 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PUT">
-        <h2>Edit the Listing : </h2>
-        <input type="text" value="<%=listing.title%>" name="listing[title]"> <br> <br>
-        <textarea  rows="5" cols="30" name="listing[description]" ><%=listing.description%></textarea> <br> <br>
-        <input type="text" value="<%=listing.image%>"  name="listing[image]"> <br> <br>
-        <input type="number" value="<%=listing.price%>"  name="listing[price]"> <br> <br>
-        <input type="text" value="<%=listing.country%>"  name="listing[country]"> <br> <br>
-        <input type="text" value="<%=listing.location%>"  name="listing[location]"> <br> <br>
-        <button>Edit
-        </button>
-    </form>
-   
-</body>
-</html>
+<%  layout("/layout/boilerplate") %> 
+
+
+<!-- <body> -->
+    <div class="row mt-3">
+        <div class="col-8 offset-2"> 
+           <h3>Edit the Listing  </h3>
+           <form method="post" action="/listings/<%=listing._id%>?_method=PUT">
+           <div class="mb-3">
+               <label for="title" class="form-label">Title</label>
+               <input type="text"  value="<%=listing.title%>" name="listing[title]" class="form-control"> 
+           </div>
+          <!-- <br> <br> -->
+
+          <div class="mb-3">
+           <label for="description" class="form-label">Description</label>
+           <textarea  rows="3" cols="30" name="listing[description]" class="form-control"> <%=listing.description%></textarea>
+          </div>
+           <!-- <br> <br> -->
+
+            <div class="mb-3">
+               <label for="image" class="form-label">Image Link</label>
+               <input type="text" value="<%=listing.image.url%>" name="listing[image]" class="form-control"> 
+            </div>
+           <!-- <br> <br> -->
+
+        <div class="row">
+            <div class="mb-3 col-md-4">
+               <label for="price" class="form-label">Price</label>
+               <input type="number" value="<%=listing.price%>"  name="listing[price]"  class="form-control"> 
+            </div>
+           <!-- <br> <br> -->
+            <div class="mb-3 col-md-8">
+               <label for="country" class="form-label">Country</label>
+               <input type="text" value="<%=listing.country%>" name="listing[country]"  class="form-control">
+            </div>
+        </div>
+
+            <!-- <br> <br> -->
+             <div class="mb-3">
+               <label for="location" class="form-label">Location</label>
+               <input type="text"  value="<%=listing.location%>"  name="listing[location]"  class="form-control"> 
+             </div>
+          
+           <button class="btn btn-dark edit-btn  mt-3 mb-3">Edit</button>
+       </form>
+   </div>
+   </div>
+
+<!-- </body> -->
