--- a/12. MAJOR_PROJECT/views/listings/index.ejs
+++ b/12. MAJOR_PROJECT/views/listings/index.ejs
@@ -1,5 +1,5 @@
 <% layout("/layout/boilerplate") %>
-<body>
+<!-- <body> -->
     <h3>All Listings</h3>
 <!-- <form method="GET" action="/listings/new">
     <button>Create New Listing</button>
@@ -13,7 +13,7 @@
     class="card-img-top" 
     style="height: 20rem;" 
     alt="...">
-
+    <div class="card-img-overlay"></div>
     <div class="card-body">
       <p class="card-text">
         <b><%= listing.title %></b> <br>
@@ -23,13 +23,7 @@
 
   </div>
   <% }  %>
-</div>
-
-
-    
-       
-         
-      
+</div>  
            
-</body>
+<!-- </body> -->
 
