--- a/12. MAJOR_PROJECT/views/listings/new.ejs
+++ b/12. MAJOR_PROJECT/views/listings/new.ejs
@@ -1,17 +1,46 @@
 
 <%  layout("/layout/boilerplate") %> 
 
-<body>
+<!-- <body> -->
+ <div class="row mt-3">
+     <div class="col-8 offset-2"> 
+        <h3>Create a New Listing </h3> 
     <form  method="post" action="/listings">
-        <h2>Add a New Listing : </h2>
-        <input type="text" placeholder="enter title" name="listing[title]"> <br> <br>
-        <textarea  rows="5" cols="30" name="listing[description]" placeholder="enter description"></textarea> <br> <br>
-        <input type="text" placeholder="enter image URL/link" name="listing[image]"> <br> <br>
-        <input type="number" placeholder="enter price" name="listing[price]"> <br> <br>
-        <input type="text" placeholder="enter country" name="listing[country]"> <br> <br>
-        <input type="text" placeholder="enter location" name="listing[location]"> <br> <br>
-        <button>Submit
-        </button>
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control"> 
+        </div>
+       <!-- <br> <br> -->
+       <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea  rows="2" cols="30" name="listing[description]" class="form-control"></textarea>
+       </div>
+        <!-- <br> <br> -->
+         <div class="mb-3">
+            <label for="image" class="form-label">Image</label>
+            <input type="text" placeholder="enter image URL/link" name="listing[image]" class="form-control"> 
+         </div>
+        <!-- <br> <br> -->
+     <div class="row">
+         <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input type="number" placeholder="1200" name="listing[price]"  class="form-control"> 
+         </div>
+        <!-- <br> <br> -->
+         <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">Country</label>
+            <input type="text" placeholder="India" name="listing[country]"  class="form-control">
+         </div>
+     </div>
+         <!-- <br> <br> -->
+          <div class="mb-3">
+            <label for="location" class="form-label">Location</label>
+            <input type="text" placeholder="Jaipur , Rajasthan" name="listing[location]"  class="form-control"> 
+          </div>
+       
+        <button class="btn btn-dark add-btn mt-3 mb-4">Add</button>
+       
     </form>
-   
-</body>
+</div>
+</div>
+<!-- </body> -->
