--- a/11. MONGODB with EXPRESS/views/index.ejs
+++ b/11. MONGODB with EXPRESS/views/index.ejs
@@ -29,6 +29,9 @@
       <form method="POST" action="/chats/<%=chat._id%>?_method=DELETE">
         <button>Delete chat</button>
       </form>
+      <form action="/chats/<%=chat._id%>">
+        <button>Show</button>
+      </form>
     </div>
       <br><br>
       
