--- a/12. MAJOR_PROJECT/views/listings/new.ejs
+++ b/12. MAJOR_PROJECT/views/listings/new.ejs
@@ -5,15 +5,18 @@
  <div class="row mt-3">
      <div class="col-8 offset-2"> 
         <h3>Create a New Listing </h3> 
-    <form  method="post" action="/listings">
+    <form  method="post" action="/listings" novalidate class="needs-validation">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control"> 
+            <input type="text" placeholder="Add a catchy title" name="listing[title]" class="form-control" required> 
+            <div class="valid-feedback"> Title looks good!</div>
         </div>
+       
        <!-- <br> <br> -->
        <div class="mb-3">
         <label for="description" class="form-label">Description</label>
-        <textarea  rows="2" cols="30" name="listing[description]" class="form-control"></textarea>
+        <textarea  rows="2" cols="30" name="listing[description]" class="form-control" required></textarea>
+        <div class="invalid-feedback">Please enter a short description</div>
        </div>
         <!-- <br> <br> -->
          <div class="mb-3">
@@ -24,18 +27,22 @@
      <div class="row">
          <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input type="number" placeholder="1200" name="listing[price]"  class="form-control"> 
+            <input placeholder="1200" name="listing[price]"  class="form-control" required> 
+            <div class="invalid-feedback">Price should be valid</div>
          </div>
+         
         <!-- <br> <br> -->
          <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
-            <input type="text" placeholder="India" name="listing[country]"  class="form-control">
+            <input type="text" placeholder="India" name="listing[country]"  class="form-control" required>
+            <div class="invalid-feedback">Country name should be valid</div>
          </div>
      </div>
          <!-- <br> <br> -->
           <div class="mb-3">
             <label for="location" class="form-label">Location</label>
-            <input type="text" placeholder="Jaipur , Rajasthan" name="listing[location]"  class="form-control"> 
+            <input type="text" placeholder="Jaipur , Rajasthan" name="listing[location]"  class="form-control" required>
+            <div class="invalid-feedback">Location should be valid</div> 
           </div>
        
         <button class="btn btn-dark add-btn mt-3 mb-4">Add</button>
