completing the authorisation for reviews ,  applying mvc design pattern

--- a/12. MAJOR_PROJECT/views/listings/show.ejs
+++ b/12. MAJOR_PROJECT/views/listings/show.ejs
@@ -7,7 +7,7 @@
 
     <div class="card col-6 offset-3 show-card listing-card">
         <img 
-        src="<%= listing.image.url %>" 
+        src="<%= listing.image %>" 
         class="card-img-top show-img" 
         alt="..."/>
         <div class="card-body">
@@ -25,7 +25,7 @@
 
 
 
-<!-- < if ( currUser && currUser._id.equals(listing.owner._id) ) {  %> -->
+<% if ( currUser && currUser._id.equals(listing.owner._id) ) {  %>
 
 <div class="btns">
     <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn"> Edit</a> 
@@ -35,11 +35,15 @@
     </form>
 </div>
 
-<!-- < } %> -->
+<% } %>
+
+
+
 
 
 <div  class="col-8 offset-3 mb-3">
     <hr>
+    <%  if(currUser)  { %>
     <h4>Leave a Review </h4>
     <form  method="POST" action="/listings/<%=listing._id%>/reviews"  novalidate class="needs-validation">
         <div class="mb-3 mt-3">
@@ -61,17 +65,19 @@
         </div>
         <button class="btn btn-outline-dark">Submit</button>
     </form>
-
     <hr>
+    <%  } %> 
+
+
 
     <p> <b> All Reviews </b></p>
  <div class="row">
     <%  for(review of listing.reviews) {   %>
 <div class="card col-5 ms-3 mb-3">
     <div class="card-body">
-        <h5 class="card-title">Jane</h5>
+        <h5 class="card-title">@<%= review.author.username   %> </h5>
         <p class="card-text"> <%=  review.comment  %> </p>
-        <p class="card-text"> <%=  review.rating %> stars </p> 
+        <p class="card-text"> <%=  review.rating   %> stars </p> 
     </div>
     <form class="mb-3 mt-3" method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id %>?_method=DELETE">
 <button class="btn btn-dark btn-sm">Delete</button>
