--- a/12. MAJOR_PROJECT/views/listings/show.ejs
+++ b/12. MAJOR_PROJECT/views/listings/show.ejs
@@ -2,7 +2,7 @@
 <!-- <body> -->
     <script>
         const mapToken = "<%=  process.env.MAP_TOKEN  %>";
-        const coordinates = <%- JSON.stringify(listing.geometry.coordinates)  %>;
+        const listing = <%- JSON.stringify(listing)  %>;
                               //parse the coordinates
     </script>
     <div class="row mt-3">
